Persistent DBPM Fragment Ids - JS2-876 ------------------------------------------------------ - add persistent fragment string id field to DBPM objects and schema - add fragment id generator to DBPM configuration - remove bogus internal Castor PSML fragment id generator and replace with fragment id generator in document handler configuration - add alternative copy page, deep copy folder, and deep merge folder APIs to support copying fragments while preserving ids - change PSML import/export and folder move operations to preserve fragment ids - remove duplicate fragment ids in demo/min PSML pages
git-svn-id: http://svn.apache.org/repos/asf/portals/jetspeed-2/portal/branches/JETSPEED-2.1.4@829497 13f79535-47bb-0310-9956-ffa450edef68